--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header navbar {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header navbar ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header navbar ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
